@@ -1,0 +1,5 @@
+<?php
+
+register_shutdown_function(function() {
+    require 'path/to/an/unknown/file';
+});
